# OZ-Supplement-Lecture

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
djangoProject/: settings.py
tabom/: apps.py  models.py
tabom/migrations/: 0001_initial.py
